fix momentum scrolling on iOS

--- a/documentation/site/docs.css
+++ b/documentation/site/docs.css
@@ -2,6 +2,7 @@ html,
 body {
   /* Prevent scroll on narrow devices */
   overflow-x: hidden;
+  -webkit-overflow-scrolling: touch;
 }
 body {
   /* Required for Scrollspy */
